--- a/index.html
+++ b/index.html
@@ -20,6 +20,49 @@
       text-transform: uppercase;
     }
 
+    #hero-box {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(4, 67, 255, 0.38);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+      cursor: pointer;
+      backdrop-filter: blur(20px) brightness(143%) grayscale(100%);
+    }
+
+    #hero-text {
+      color: #ddeaff;
+      font-size: 23vw;
+      text-align: center;
+      padding: 20px;
+      max-width: 100%;
+      text-shadow: 0px 0px 150px #000000;
+      font-style: italic;
+      margin-bottom: 80px;
+      animation: animate-text 2.5s infinite;
+      animation-timing-function: cubic-bezier(.23,1,.32,1);
+    }
+
+    @keyframes animate-text {
+      0% {
+        opacity: 0;
+        transform: translateY(150px);
+      }
+      50% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(-50px);
+      }
+    }
+
     #header {
       display: flex;
       justify-content: center;
@@ -242,6 +285,10 @@
     </div>
   </div>
 
+  <div id="hero-box">
+    <div id="hero-text">CLICK!</div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script>
     function updateClocks() {
@@ -321,6 +368,12 @@
         counter += 1;
       }
     }
+
+    // Add script to handle hero box disappearance
+    var heroBox = document.getElementById('hero-box');
+    heroBox.addEventListener('click', function() {
+      heroBox.style.display = 'none';
+    });
   </script>
 </body>
 
